Fix post overflowing when there was a long post + link flair

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -78,6 +78,11 @@
   font-size: 1.85rem;
 }
 
+.post-title {
+  color: #ededed;
+  font-size: 1.85rem;
+}
+
 .subreddit {
   color: #ff5252;
 }
